[tool.poetry]
name = "requests_har"
version = "1.1.0"
description = "HAR hook for the requests library"
authors = ["Dogeek <simon.bordeyne@gmail.com>"]
license = "MIT"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
repository = "https://github.com/sbordeyne/requests_har"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
types-requests = "^2.31.0.10"
pylint = "^3.0.2"
isort = "^5.12.0"
pytest = "^7.4.3"

[tool.poe.tasks]
add_changelog  = { script = "scripts.add_changelog:main" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylama = "^8.3.7"
yapf = "^0.32.0"
isort = "^5.10.1"
requests = "^2.27.1"
poethepoet = "^0.12.2"
toml = "^0.10.2"
tbump = "^6.7.0"
sphinx = '*'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "https://github.com/Dogeek/requests_har/"

[tool.tbump.version]
current = "1.0.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "[version] Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "requests_har/__init__.py"

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

[[tool.tbump.before_commit]]
name = "add-changelog"
cmd = "poetry run poe add_changelog {new_version}"

[[tool.tbump.after_push]]
name = "publish"
cmd = "poetry publish --build"

[tool.changelog.tag_mapping]
fix = "Bugfixes"
feat = "New features"
san = "Refactorings"

[tool.isort]
profile = "black"
